--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
-    <title>Emely Garcia - Frontend Developer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Jersey+25&display=swap" rel="stylesheet">
+    <title>Emely Garcia</title>
   </head>
   <body>
     <div id="root"></div>
